--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,33 +118,6 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
 
-      - name: Create test posts
-        run: |
-          mkdir -p apps/web/src/content/blog/en/
-
-          frontmatter() {
-            cat << EOF
-          ---
-          title: $1
-          date: '2000-01-01T00:00:00Z'
-          modifiedTime: '2000-01-01T00:00:00Z'
-          summary: This is a test post.
-          ---
-
-          # $1
-
-          This is a test post.
-          EOF
-          }
-
-          # Create posts
-          frontmatter "Test Submit Comment" > apps/web/src/content/blog/en/test-submit.mdx
-          frontmatter "Test Delete Comment" > apps/web/src/content/blog/en/test-delete.mdx
-          frontmatter "Test Reply Comment" > apps/web/src/content/blog/en/test-reply.mdx
-          frontmatter "Test Delete Reply" > apps/web/src/content/blog/en/test-delete-reply.mdx
-          frontmatter "Test View Post" > apps/web/src/content/blog/en/test-view.mdx
-          frontmatter "Test Like Post" > apps/web/src/content/blog/en/test-like.mdx
-
       - name: Setup Playwright
         run: pnpm playwright install --with-deps
 
@@ -152,13 +125,13 @@ jobs:
         run: docker compose up -d
 
       - name: Migrate database
-        run: pnpm run db:migrate
+        run: pnpm db:migrate
 
       - name: Seed database
-        run: pnpm run db:seed
+        run: pnpm db:seed
 
       - name: Run Playwright tests
-        run: pnpm run test:e2e
+        run: pnpm test:e2e
 
       - name: Upload Playwright report
         if: always()
