--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,7 @@
   "globalDependencies": [".env.*local"],
   "globalEnv": [
     "NODE_ENV",
-    "APP_ENV",
+    "MOCK_SERVER",
     "CI",
     "ANALYZE",
     "NEXT_RUNTIME",
