--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ env:
   UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
   IP_ADDRESS_SALT: ${{ secrets.IP_ADDRESS_SALT }}
   BETTER_AUTH_SECRET: ${{ secrets.BETTER_AUTH_SECRET }}
-  APP_ENV: ${{ secrets.APP_ENV }}
+  MOCK_SERVER: ${{ secrets.MOCK_SERVER }}
   GITHUB_CLIENT_ID: ${{ secrets.GH_CLIENT_ID }}
   GITHUB_CLIENT_SECRET: ${{ secrets.GH_CLIENT_SECRET }}
 
