--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -19,6 +19,7 @@
     "@eslint-react/eslint-plugin": "^1.52.6",
     "@eslint/js": "^9.34.0",
     "@next/eslint-plugin-next": "^15.5.0",
+    "@repo/typescript-config": "workspace:*",
     "@types/eslint-plugin-jsx-a11y": "^6.10.0",
     "@typescript-eslint/utils": "^8.40.0",
     "eslint": "^9.28.0",
