--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
-github: tszhong0411
-ko_fi: tszhong0411
-buy_me_a_coffee: tszhong0411
+github: nelsonlaidev
+ko_fi: nelsonlaidev
+buy_me_a_coffee: nelsonlaidev
