--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -2,5 +2,5 @@
   "name": "@repo/typescript-config",
   "version": "0.0.0",
   "license": "MIT",
-  "author": "Nelson Lai <me@nelsonlai.me> (https://github.com/tszhong0411/)"
+  "author": "Nelson Lai <me@nelsonlai.me> (https://github.com/nelsonlaidev/)"
 }
