refactor: use my config packages

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -86,10 +86,10 @@
     "@content-collections/core": "^0.9.0",
     "@content-collections/mdx": "^0.2.2",
     "@content-collections/next": "^0.2.6",
+    "@nelsonlaidev/eslint-config": "file:../../../config/packages/eslint-config",
+    "@nelsonlaidev/typescript-config": "^0.0.2",
     "@next/bundle-analyzer": "^15.3.3",
-    "@repo/eslint-config": "workspace:*",
     "@repo/kv": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "^4.1.8",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
