--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -20,7 +20,7 @@
     "zod": "^3.25.51"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*"
+    "@nelsonlaidev/eslint-config": "file:../../../config/packages/eslint-config",
+    "@nelsonlaidev/typescript-config": "^0.0.2"
   }
 }
