--- a/packages/kv/package.json
+++ b/packages/kv/package.json
@@ -21,8 +21,8 @@
     "consola": "^3.4.2"
   },
   "devDependencies": {
-    "@repo/env": "workspace:*",
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*"
+    "@nelsonlaidev/eslint-config": "file:../../../config/packages/eslint-config",
+    "@nelsonlaidev/typescript-config": "^0.0.2",
+    "@repo/env": "workspace:*"
   }
 }
