--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@cspell/dict-redis": "^1.0.5",
-    "@nelsonlaidev/eslint-config": "file:../config/packages/eslint-config",
+    "@nelsonlaidev/eslint-config": "https://pkg.pr.new/@nelsonlaidev/eslint-config@8203040",
     "@nelsonlaidev/prettier-config": "^0.0.2",
     "@nelsonlaidev/typescript-config": "^0.0.2",
     "@playwright/test": "^1.52.0",
