--- a/packages/emails/package.json
+++ b/packages/emails/package.json
@@ -22,7 +22,7 @@
     "react-email": "^4.0.16"
   },
   "devDependencies": {
-    "@nelsonlaidev/eslint-config": "file:../../../config/packages/eslint-config",
+    "@nelsonlaidev/eslint-config": "https://pkg.pr.new/@nelsonlaidev/eslint-config@8203040",
     "@nelsonlaidev/typescript-config": "^0.0.2",
     "@types/node": "^22.15.29",
     "@types/react": "^19.1.6",
