--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -20,7 +20,7 @@
     "zod": "^3.25.51"
   },
   "devDependencies": {
-    "@nelsonlaidev/eslint-config": "file:../../../config/packages/eslint-config",
+    "@nelsonlaidev/eslint-config": "https://pkg.pr.new/@nelsonlaidev/eslint-config@8203040",
     "@nelsonlaidev/typescript-config": "^0.0.2"
   }
 }
