--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -20,7 +20,7 @@
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
-    "@nelsonlaidev/eslint-config": "file:../../../config/packages/eslint-config",
+    "@nelsonlaidev/eslint-config": "https://pkg.pr.new/@nelsonlaidev/eslint-config@8203040",
     "@nelsonlaidev/typescript-config": "^0.0.2",
     "@types/node": "^22.15.29"
   }
