--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,9 @@ jobs:
       - name: Build MDX
         run: pnpm build:mdx
 
+      - name: Generate Next.js route types
+        run: pnpm --filter web typegen
+
       - name: Run ESLint
         run: pnpm lint
 
