--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:apps": "turbo build --filter=./apps/*",
     "build:mdx": "turbo build:mdx",
     "check": "turbo lint && turbo type-check && pnpm format:check && pnpm check:spelling && pnpm check:knip",
-    "check:knip": "dotenv -e .env.local -- knip",
+    "check:knip": "knip",
     "check:spelling": "cspell -c .cspell.json --no-progress --no-summary --no-must-find-files --unique",
     "clean": "turbo clean && rm -rf .turbo coverage",
     "cz": "cross-env NODE_OPTIONS='--experimental-transform-types --disable-warning ExperimentalWarning' czg",
@@ -60,12 +60,11 @@
     "cross-env": "^7.0.3",
     "cspell": "^9.0.2",
     "czg": "^1.11.1",
-    "dotenv-cli": "^8.0.0",
     "eslint": "^9.28.0",
     "husky": "^9.1.7",
     "jiti": "^2.5.1",
     "jsdom": "^26.1.0",
-    "knip": "5.61.1",
+    "knip": "^5.63.0",
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "prettier-plugin-packagejson": "^2.5.18",
