--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.13.6",
+    "dotenv": "^17.2.1",
     "zod": "^3.25.51"
   },
   "devDependencies": {
