--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,19 +5,20 @@
   "author": "Nelson Lai <me@nelsonlai.me> (https://github.com/nelsonlaidev/)",
   "type": "module",
   "scripts": {
-    "build": "next build",
+    "build": "pnpm with-env next build",
     "build:mdx": "content-collections build",
     "bundle-analyzer": "cross-env ANALYZE=true pnpm build",
     "clean": "rm -rf .next .turbo .content-collections test-results playwright-report",
-    "dev": "next dev --turbopack -p 3000",
+    "dev": "pnpm with-env next dev --turbopack -p 3000",
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "eslint --fix .",
-    "start": "next start -p 3000",
-    "test:e2e": "playwright test",
-    "test:e2e:inspector": "playwright test $1 --debug",
-    "test:e2e:ui": "playwright test --ui",
+    "start": "pnpm with-env next start -p 3000",
+    "test:e2e": "pnpm with-env playwright test",
+    "test:e2e:inspector": "pnpm with-env playwright test $1 --debug",
+    "test:e2e:ui": "pnpm with-env playwright test --ui",
     "type-check": "tsc --noEmit",
-    "typegen": "next typegen"
+    "typegen": "pnpm with-env next typegen",
+    "with-env": "dotenvx run -f ../../.env.local --"
   },
   "lint-staged": {
     "*.{mjs,ts,tsx}": "eslint --fix"
