--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:apps": "turbo build --filter=./apps/*",
     "build:mdx": "turbo build:mdx",
     "check": "turbo lint && turbo type-check && pnpm format:check && pnpm check:spelling && pnpm check:knip",
-    "check:knip": "knip",
+    "check:knip": "pnpm with-env knip",
     "check:spelling": "cspell -c .cspell.json --no-progress --no-summary --no-must-find-files --unique",
     "clean": "turbo clean && rm -rf .turbo coverage",
     "cz": "cross-env NODE_OPTIONS='--experimental-transform-types --disable-warning ExperimentalWarning' czg",
@@ -37,7 +37,8 @@
     "test:unit": "vitest run",
     "test:unit:coverage": "vitest --coverage --ui",
     "test:unit:ui": "vitest --ui",
-    "type-check": "turbo type-check"
+    "type-check": "turbo type-check",
+    "with-env": "dotenvx run -f .env.local --"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --fix",
@@ -50,6 +51,7 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@cspell/dict-redis": "^1.0.5",
+    "@dotenvx/dotenvx": "^1.49.0",
     "@nelsonlaidev/eslint-config": "https://pkg.pr.new/@nelsonlaidev/eslint-config@6e3e58f",
     "@nelsonlaidev/prettier-config": "https://pkg.pr.new/@nelsonlaidev/prettier-config@6e3e58f",
     "@nelsonlaidev/typescript-config": "^0.0.2",
