chore: use npm registry

--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@cspell/dict-redis": "^1.0.5",
     "@dotenvx/dotenvx": "^1.49.0",
-    "@nelsonlaidev/eslint-config": "https://pkg.pr.new/@nelsonlaidev/eslint-config@6e3e58f",
-    "@nelsonlaidev/prettier-config": "https://pkg.pr.new/@nelsonlaidev/prettier-config@6e3e58f",
+    "@nelsonlaidev/eslint-config": "^1.0.0",
+    "@nelsonlaidev/prettier-config": "^0.1.0",
     "@nelsonlaidev/typescript-config": "^0.0.2",
     "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.29",
