--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -20,7 +20,7 @@
     "zod": "^3.25.51"
   },
   "devDependencies": {
-    "@nelsonlaidev/eslint-config": "https://pkg.pr.new/@nelsonlaidev/eslint-config@6e3e58f",
+    "@nelsonlaidev/eslint-config": "^1.0.0",
     "@nelsonlaidev/typescript-config": "^0.0.2"
   }
 }
