--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,8 +4,10 @@
   "license": "MIT",
   "author": "Nelson Lai <me@nelsonlai.me> (https://github.com/nelsonlaidev/)",
   "type": "module",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "exports": {
+    "import": "./src/index.ts",
+    "types": "./src/index.ts"
+  },
   "scripts": {
     "clean": "rm -rf .turbo",
     "db:check": "pnpm with-env drizzle-kit check",
