--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -2,7 +2,7 @@
   "name": "@repo/env",
   "version": "0.0.0",
   "license": "MIT",
-  "author": "Nelson Lai <me@nelsonlai.me> (https://github.com/nelsonlaidev/)",
+  "author": "Nelson Lai <me@nelsonlai.dev> (https://github.com/nelsonlaidev/)",
   "type": "module",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
