--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,10 +45,7 @@
   "i18n-ally.keystyle": "nested",
   "i18n-ally.localesPaths": ["packages/i18n/src/messages"],
 
-  "tailwindCSS.experimental.classRegex": [
-    ["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"],
-    ["cn\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
-  ],
+  "tailwindCSS.classFunctions": ["cva", "cn"],
 
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "typescript.preferences.preferTypeOnlyAutoImports": true,
