--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:mdx": "turbo build:mdx",
     "check": "turbo lint && turbo type-check && pnpm format:check && pnpm check:spelling && pnpm check:knip",
     "check:knip": "pnpm with-env knip",
-    "check:spelling": "cspell \"**\" --no-progress --no-summary --no-must-find-files --unique",
+    "check:spelling": "cspell --no-progress --no-summary --no-must-find-files --unique",
     "clean": "turbo clean && rm -rf .turbo coverage",
     "db:check": "turbo db:check",
     "db:generate": "turbo db:generate",
