--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres:16-alpine
     container_name: nelsonlaime-postgres
     ports:
-      - '5432:5432'
+      - 5432:5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -18,7 +18,7 @@ services:
     image: redis
     container_name: nelsonlaime-redis
     ports:
-      - '6379:6379'
+      - 6379:6379
     volumes:
       - redis:/data
     networks:
@@ -28,11 +28,11 @@ services:
     image: hiett/serverless-redis-http:latest
     container_name: nelsonlaime-redis-http
     ports:
-      - '8079:80'
+      - 8079:80
     environment:
       SRH_MODE: env
       SRH_TOKEN: nelsonlaime
-      SRH_CONNECTION_STRING: 'redis://redis:6379'
+      SRH_CONNECTION_STRING: redis://redis:6379
     networks:
       - nelsonlaime-network
     depends_on:
