--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 # ---------------------------------------------------------------------------------------------------------
 # [Required]
-#
 # Deployment URL
 # ---------------------------------------------------------------------------------------------------------
 NEXT_PUBLIC_SITE_URL="http://localhost:3000"
@@ -8,43 +7,36 @@ NEXT_PUBLIC_SITE_URL="http://localhost:3000"
 # ---------------------------------------------------------------------------------------------------------
 # [Required]
 # Database URL
-# For views, likes, guestbook, comments, authentication.
 # ---------------------------------------------------------------------------------------------------------
 DATABASE_URL="postgres://postgres:postgres@localhost:5432/nelsonlaime"
 
 # ---------------------------------------------------------------------------------------------------------
 # [Required]
-#
 # Redis
-# For caching
 # ---------------------------------------------------------------------------------------------------------
 UPSTASH_REDIS_REST_URL="http://localhost:8079"
 UPSTASH_REDIS_REST_TOKEN="nelsonlaime"
 
 # ---------------------------------------------------------------------------------------------------------
 # [Required]
-#
 # Random string (used for hashing)
 # To identify a single user when they like the post.
 # We hash the IP address so we won't know the actual address.
-#
-# @see https://www.useapassphrase.com/
+# https://www.useapassphrase.com/
 # ---------------------------------------------------------------------------------------------------------
 IP_ADDRESS_SALT="random-passphrase"
 
 # ---------------------------------------------------------------------------------------------------------
 # [Required]
-#
 # Authentication
-# @see https://www.better-auth.com/docs/installation#set-environment-variables
+# https://www.better-auth.com/docs/installation#set-environment-variables
 # ---------------------------------------------------------------------------------------------------------
 BETTER_AUTH_SECRET="super_secret_key_32_chars_minimum"
 
 # ---------------------------------------------------------------------------------------------------------
 # [Optional]
-#
 # Spotify Now Playing
-# @see https://developer.spotify.com/documentation/web-api/reference/get-the-users-currently-playing-track
+# https://developer.spotify.com/documentation/web-api/reference/get-the-users-currently-playing-track
 # ---------------------------------------------------------------------------------------------------------
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
@@ -52,57 +44,53 @@ SPOTIFY_REFRESH_TOKEN=
 
 # ---------------------------------------------------------------------------------------------------------
 # [Optional]
-#
 # Dashboard page
 # ---------------------------------------------------------------------------------------------------------
 
 # Google API (YouTube stats)
-# @see https://developers.google.com/youtube/v3/getting-started
+# https://developers.google.com/youtube/v3/getting-started
 GOOGLE_API_KEY=
 
 # Github API (Github stats)
-# @see https://github.com/settings/tokens/new
+# https://github.com/settings/tokens/new
 GITHUB_TOKEN=
 
 # WakaTime API Key (Coding hours)
-# @see https://wakatime.com/api-key/
+# https://wakatime.com/api-key/
 WAKATIME_API_KEY=
+
+# ---------------------------------------------------------------------------------------------------------
+# [Optional]
+# Authentication
+# ---------------------------------------------------------------------------------------------------------
 
 # Google OAuth
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
 # Github OAuth
-# @see https://github.com/settings/applications/new
+# https://github.com/settings/applications/new
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
 # ---------------------------------------------------------------------------------------------------------
 # [Optional]
-#
 # Discord Webhook
-# For the notification of new comments from the guestbook.
 # ---------------------------------------------------------------------------------------------------------
 DISCORD_WEBHOOK_URL=
 
 # ---------------------------------------------------------------------------------------------------------
 # [Optional]
-#
 # Resend
-# For the notification of new comments from the blog posts.
-#
-# @see https://resend.com
+# https://resend.com
 # ---------------------------------------------------------------------------------------------------------
 RESEND_API_KEY=
 AUTHOR_EMAIL=
 
 # ---------------------------------------------------------------------------------------------------------
 # [Optional]
-#
 # Analytics
-# Using Umami.
-#
-# @see https://umami.is
+# https://umami.is
 # ---------------------------------------------------------------------------------------------------------
 NEXT_PUBLIC_UMAMI_URL=
 NEXT_PUBLIC_UMAMI_WEBSITE_ID=
