--- a/.env.example
+++ b/.env.example
@@ -8,14 +8,14 @@ NEXT_PUBLIC_SITE_URL="http://localhost:3000"
 # [Required]
 # Database URL
 # ---------------------------------------------------------------------------------------------------------
-DATABASE_URL="postgres://postgres:postgres@localhost:5432/nelsonlaime"
+DATABASE_URL="postgres://postgres:postgres@localhost:5432/nelsonlaidev"
 
 # ---------------------------------------------------------------------------------------------------------
 # [Required]
 # Redis
 # ---------------------------------------------------------------------------------------------------------
 UPSTASH_REDIS_REST_URL="http://localhost:8079"
-UPSTASH_REDIS_REST_TOKEN="nelsonlaime"
+UPSTASH_REDIS_REST_TOKEN="nelsonlaidev"
 
 # ---------------------------------------------------------------------------------------------------------
 # [Required]
