feat: support Chinese fonts in OG images

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -3,8 +3,8 @@ version: '0.2'
 useGitignore: true
 files:
   - '**'
-  - '.*'
-  - '.**/*'
+  - .*
+  - .**/*
   - '!.git/**'
 ignorePaths:
   - pnpm-lock.yaml
@@ -60,6 +60,7 @@ words:
   - nlcj
   - nodedotjs
   - nosniff
+  - noto
   - nums
   - nuqs
   - octocat
