feat(web): add terms and privacy

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -36,6 +36,7 @@ words:
   - fuma
   - fumadocs
   - ghostty
+  - gifs
   - googleusercontent
   - hiett
   - iina
@@ -83,6 +84,7 @@ words:
   - sonarjs
   - techstack
   - theodorusclarence
+  - timebombs
   - tsvector
   - turbopack
   - umami
