--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ env:
 jobs:
   tests:
     name: Unit Tests
-    runs-on: 'self-hosted'
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout branch
         uses: actions/checkout@v4
@@ -39,7 +39,7 @@ jobs:
 
   eslint:
     name: ESLint
-    runs-on: 'self-hosted'
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout branch
         uses: actions/checkout@v4
@@ -58,7 +58,7 @@ jobs:
 
   types:
     name: TypeScript
-    runs-on: 'self-hosted'
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout branch
         uses: actions/checkout@v4
@@ -77,7 +77,7 @@ jobs:
 
   prettier:
     name: Prettier
-    runs-on: 'self-hosted'
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout branch
         uses: actions/checkout@v4
@@ -90,7 +90,7 @@ jobs:
 
   spelling:
     name: Spelling
-    runs-on: 'self-hosted'
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout branch
         uses: actions/checkout@v4
@@ -103,7 +103,7 @@ jobs:
 
   knip:
     name: Knip
-    runs-on: 'self-hosted'
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout branch
         uses: actions/checkout@v4
@@ -119,7 +119,7 @@ jobs:
 
   e2e:
     name: End-to-end tests
-    runs-on: 'self-hosted'
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: [tests, eslint, types]
     steps:
