refactor: avoid bundling mdx in client js

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -72,6 +72,7 @@
     "remark-gfm": "^4.0.1",
     "resend": "^6.0.3",
     "rss": "^1.2.2",
+    "server-only": "^0.0.1",
     "shiki": "^3.12.2",
     "tinycolor2": "^1.6.0",
     "unified": "^11.0.5",
