--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,6 +130,36 @@ jobs:
       - name: Setup Playwright
         run: pnpm playwright install --with-deps chromium --only-shell
 
+      - name: Create test posts
+        run: |
+          mkdir -p apps/web/src/content/blog/en/
+
+          frontmatter() {
+            cat << EOF
+          ---
+          title: $1
+          date: '1970-01-01T00:00:00Z'
+          modifiedTime: '1970-01-01T00:00:00Z'
+          summary: This is a test post.
+          ---
+
+          # $1
+
+          This is a test post.
+          EOF
+          }
+
+          # Create posts
+          frontmatter "Test Submit Comment" > apps/web/src/content/blog/en/test-submit.mdx
+          frontmatter "Test Delete Comment" > apps/web/src/content/blog/en/test-delete.mdx
+          frontmatter "Test Reply Comment" > apps/web/src/content/blog/en/test-reply.mdx
+          frontmatter "Test Delete Reply" > apps/web/src/content/blog/en/test-delete-reply.mdx
+          frontmatter "Test View Post" > apps/web/src/content/blog/en/test-view.mdx
+          frontmatter "Test Like Post" > apps/web/src/content/blog/en/test-like.mdx
+
+      - name: Build apps
+        run: pnpm build:apps
+
       - name: Run services
         run: docker compose up -d
 
