--- a/lighthouserc.yaml
+++ b/lighthouserc.yaml
@@ -8,22 +8,7 @@ ci:
       - http://localhost:3000
 
   assert:
-    assertions:
-      categories:performance:
-        - error
-        - minScore: 0.8
-      categories:accessibility:
-        - error
-        - minScore: 0.95
-      categories:'best-practices':
-        - error
-        - minScore: 1.0
-      categories:seo:
-        - error
-        - minScore: 1.0
-      categories:pwa:
-        - error
-        - minScore: 1.0
+    preset: lighthouse:no-pwa
 
   upload:
     target: 'temporary-public-storage'
