--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -2,10 +2,10 @@ $schema: https://raw.githubusercontent.com/streetsidesoftware/cspell/main/cspell
 version: '0.2'
 useGitignore: true
 files:
-  - '**' # include all files
-  - '.*' # include dot files
-  - '.*/**' # include dot files in sub-directories
-  - '!.git/**' # exclude .git directory
+  - '**'
+  - .*
+  - .*/**
+  - '!.git/**'
 ignorePaths:
   - pnpm-lock.yaml
 dictionaries:
@@ -42,6 +42,7 @@ words:
   - hiett
   - iina
   - innerhtml
+  - isready
   - jahir
   - joshwcomeau
   - karabiner
