--- a/packages/emails/package.json
+++ b/packages/emails/package.json
@@ -4,8 +4,12 @@
   "license": "MIT",
   "author": "Nelson Lai <me@nelsonlai.dev> (https://github.com/nelsonlaidev/)",
   "type": "module",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "exports": {
+    ".": {
+      "import": "./src/index.ts",
+      "types": "./src/index.ts"
+    }
+  },
   "scripts": {
     "dev": "email dev --port 3001 --dir src/templates",
     "export": "email export",
